# circular_motion

./: CMakeLists.txt  README.md  package.xml
config/: initial_conditions.yaml  simulation.rviz
include/: geometry_helpers.hpp  pointList.hpp
launch/: autocirc.launch  circ.launch  initdrone.launch
msg/: State.msg
src/: circle_position_server.cpp  circular_pub.cpp  geometry_helpers.cpp  pointList.cpp  sync.cpp
srv/: CalculateCirclePosition.srv
